--- a/index1.html
+++ b/index1.html
@@ -37,7 +37,7 @@
           height="30"
           width="30"
       /></div>
-      <div class="div5"><b>Greg Hooper</b></div>
+      <div class="div5"><b>Greg Hooperman</b></div>
       
     </footer>
     <div>
